merge-struct/src/snapshots/merge_struct__tests__merge_left_empty.snap
---
source: merge-struct/src/lib.rs
expression: "merge(&left, &right).unwrap()"
---
is_root: true
folders:
  - name: /var/log
    num_files: 20
entries:
  /var/log/f1:
    name: f1
    size: 12

